# tinytapeout-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: e2e.yaml  lint.yaml  publish.yaml  test.yaml
docs/: tt-cli-prd.md
src/tinytapeout/: __init__.py  __main__.py  project_checks.py  project_info.py  tech.py
src/tinytapeout/cli/: app.py  console.py  context.py  environment.py  harden.py  precheck_env.py  runner.py  update_checker.py
src/tinytapeout/cli/commands/: check.py  doctor.py  gds.py  init.py  test.py
tests/: conftest.py  test_check.py  test_context.py  test_doctor.py  test_init.py  test_precheck_env.py  test_project_info.py  test_tech.py
